lucid-log-frontend/src/app/home/home.component.css
.quote {
  font-style: italic ;
  max-width: 100%;
  text-align: center;
  transition: opacity 1s ease-in-out;
  padding-bottom: 50px;
}

.title {
  text-align: center;
}

/* Initially visible */
.fade-in {
  opacity: 1;
}

/* Fades out before changing quote */
.fade-out {
  opacity: 0;
}


/* Style the side navigation */
.sidenav {
  height: 100%;
  width: 200px;
  position: fixed;
  padding-top: 10px;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: #222222;
  overflow-x: hidden;
}

/* Side navigation links */
.sidenav a {
  color: white;
  padding: 16px;
  text-align: center;
  background-color: #222222;
  text-decoration: none;
  display: block;
}

.sidenav hr {
  color: moccasin;
  margin-bottom: 10px;
}

.dream-input {
  width: 100%; /* ✅ Ensures textarea takes full width */
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 10px;
  background-color: #222222;
}

.sidenav p{
  text-align: center;
  color: moccasin;
  background-color: #222222;
}

/* ✅ Textarea Styling */
.dream-input textarea {
  width: 90%; /* ✅ Nearly full width */
  height: 100px; /* ✅ Enough space for multiple lines */
  border: 2px solid moccasin;
  border-radius: 5px;
  background-color: #333333;
  color: moccasin;
  padding: 20px;
  margin-bottom: 10px;
  font-size: 1rem;
  resize: vertical; /* ✅ Allow resizing */
  outline: none;
}

/* Change color on hover */
.sidenav a:hover {
  /* background-color: #ddd; */
  color: moccasin;
}

/* Style the content */
.content {
  margin-left: 200px;
  padding-left: 20px;
}

/* The actual timeline (the vertical ruler) */
.timeline {
  position: relative;
  max-width: 1200px;
  margin: 0 auto;
}

/* The actual timeline (the vertical ruler) */
.timeline::after {
  content: '';
  position: absolute;
  width: 6px;
  background-color: #333333;
  top: 0;
  bottom: 0;
  left: 50%;
  margin-left: -3px;
}

/* Container around content */
.container {
  padding: 10px 40px;
  position: relative;
  background-color: inherit;
  width: 50%;
}

/* The circles on the timeline */
.container::after {
  content: '';
  position: absolute;
  width: 25px;
  height: 25px;
  right: -17px;
  background-color: #333333;
  border: 4px solid #FF9F55;
  top: 15px;
  border-radius: 50%;
  z-index: 1;
}

.container h2 {
  margin: 0;
  font-size: 1.2rem;
  font-weight: bold;
}

/* ✅ Left-aligned containers */
.left {
  left: 0;
  text-align: right;
  padding-right: 5%;
}

/* ✅ Right-aligned containers */
.right {
  left: 50%;
  text-align: left;
  padding-left: 5%;
}



/* Add arrows to the left container (pointing right) */
.left::before {
  content: " ";
  height: 0;
  position: absolute;
  top: 22px;
  width: 0;
  z-index: 1;
  right: 30px;
  border: medium solid white;
  border-width: 10px 0 10px 10px;
  border-color: transparent transparent transparent #333333;
}

/* Add arrows to the right container (pointing left) */
.right::before {
  content: " ";
  height: 0;
  position: absolute;
  top: 22px;
  width: 0;
  z-index: 1;
  left: 30px;
  border: medium solid white;
  border-width: 10px 10px 10px 0;
  border-color: transparent #333333 transparent transparent;
}

/* Fix the circle for containers on the right side */
.right::after {
  left: -16px;
}

/* The actual content */
.content {
  padding: 20px 30px;
  position: relative;
  border-radius: 6px;
}

/* Media queries - Responsive timeline on screens less than 600px wide */
@media screen and (max-width: 600px) {
  /* Place the timelime to the left */
  .timeline::after {
  left: 31px;
  }
  
  /* Full-width containers */
  .container {
  width: 100%;
  padding-left: 70px;
  padding-right: 25px;
  }
  
  /* Make sure that all arrows are pointing leftwards */
  .container::before {
  left: 60px;
  border: medium solid white;
  border-width: 10px 10px 10px 0;
  border-color: transparent white transparent transparent;
  }

  /* Make sure all circles are at the same spot */
  .left::after, .right::after {
  left: 15px;
  }
  
  /* Make all right containers behave like the left ones */
  .right {
  left: 0%;
  }
}

